--- a/app/views/port/home.html.erb
+++ b/app/views/port/home.html.erb
@@ -1,1 +1,7 @@
-<h1>hi there</h1>
+<div class="my-slider">
+	<ul>
+		<li>My slide</li>
+		<li>Another slide</li>
+		<li>My last slide</li>
+	</ul>
+</div>
