some image in there, good enough

--- a/app/views/port/home.html.erb
+++ b/app/views/port/home.html.erb
@@ -1,6 +1,7 @@
 <div class="my-slider">
 	<ul>
-		<li>My slide</li>
+		<li><img src="http://placehold.it/700x700" class="img-responsive">
+</li>
 		<li>Another slide</li>
 		<li>My last slide</li>
 	</ul>
